Long Form Landing Page Tweaks

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -272,6 +272,10 @@ body.no-header.no-footer .entry-content-wrap {
   }
 }
 @media screen and (max-width: 767px) {
+  .landing-long-form {
+	padding-right: 0px;
+	padding-left: 0px;
+  }
   .landing-long-form .section-testimonials .splide__arrow--prev {
     left: 6px !important;
   }
